# LearningPlatform

./: LICENSE  pyproject.toml
LearningPlatform/: asgi.py  settings.py  urls.py  wsgi.py
