[tool.poetry]
name = "learningplatform"
version = "0.1.0"
description = ""
authors = ["Rusty Shackleford <rusty@anarchopracticalist.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
django-ninja = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
